# VidTanium

./: .bandit  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_TESTING_REPORT.md  FUNCTIONALITY_VERIFICATION.md  LICENSE  MKDOCS_SETUP.md  OPTIMIZATION_SUMMARY.md  PACKAGING.md  README.md  RESOURCE_MANAGER_MERGE.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  WARP.md  build_config.py  demo_singleton.py  docker-compose.yml  main.py  mkdocs.yml  mypy.ini  mypy_new_files.ini  pyproject.toml  pytest.ini  refactor_enhanced_names.py  requirements-docs.txt  ruff.toml  test_help_system.py  test_singleton_standalone.py  test_task_dialog.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  monitoring.yml  performance.yml  release.yml  security.yml
assets/: .gitkeep  vidtanium.desktop
config/presets/: development.json  high_performance.json  low_resource.json  production.json
config/schema/: base_schema.json
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  INSTALLATION.md  PROJECT_STRUCTURE.md  README.md  USER_MANUAL.md  api-reference.md  configuration-examples.md  configuration-guide.md  configuration-migration-guide.md  configuration-system-overview.md  examples.md  getting-started.md  help-system.md  index.md  project-structure.md  singleton-process-guide.md  user-manual.md  workflow-guide.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
llmdoc/agent/: GUI-INVESTIGATION-INDEX.md  current-styling-approaches-and-code-examples.md  custom-widgets-and-component-inventory.md  design-inconsistencies-and-standardization-requirements.md  gui-architecture-and-components-analysis.md  gui-investigation-executive-summary.md  theme-and-color-scheme-implementation.md
scripts/: auto_updater.py  build_all.py  build_docker.py  build_linux_packages.py  create_macos_pkg.py  create_msi.py  package_verification.py  remove_vidtanium_theme.py  setup_packaging.py  test-docs.py
src/app/: application.py  logging_config.py  (+1 more)
test/: auto.py  test_url.py  url.py
tests/: conftest.py  test_i18n_coverage.py  test_i18n_standalone.py
(+214 files in other folders)
