[project]
name = "vidtanium"
version = "0.1.0"
description = "A video player with a built-in downloader and a simple video editor."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "loguru>=0.7.3",
    "markdown>=3.7.0",
    "playwright>=1.52.0",
    "psutil>=7.0.0",
    "pycryptodome>=3.22.0",
    "pyside6>=6.9.0",
    "pyside6-fluent-widgets[full]>=1.8.7",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "rich>=14.2.0",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-psutil>=7.0.0.20250822",
    "types-requests>=2.32.4.20250809",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.1.0",
    "pytest-xvfb>=3.0.0",
    "coverage>=7.6.0",
]
